--- a/action.yml
+++ b/action.yml
@@ -53,6 +53,16 @@ runs:
       uses: actions/setup-node@v4
       with:
         node-version: 20
+        
+    - name: Run GitLeaks secret scan
+      uses: gitleaks/gitleaks-action@v2
+      with:
+        args: detect --no-git --source . --report-format json --report-path gitleaks-report.json
+      continue-on-error: true
+
+    - name: Show GitLeaks findings
+      if: always()
+      run: cat gitleaks-report.json || echo "No gitleaks-report.json"
 
     - name: Install deps
       shell: bash
@@ -63,7 +73,6 @@ runs:
       shell: bash
       working-directory: ${{ github.action_path }}
       env:
-        # GitHub & model env
         GITHUB_TOKEN: ${{ github.token }}
         OPENAI_API_KEY: ${{ inputs.openai_api_key }}
         OPENAI_BASE_URL: ${{ inputs.openai_base_url }}
