--- a/action.yml
+++ b/action.yml
@@ -59,58 +59,40 @@ runs:
       with:
         node-version: 20
 
-    # ---- Install GitLeaks manually ----
-    - name: Install GitLeaks
-      shell: bash
-      env:
-        GITLEAKS_VERSION: "8.24.3"
-      run: |
-        set -euo pipefail
-        curl -sSL -o /tmp/gitleaks.tar.gz \
-          "https://github.com/gitleaks/gitleaks/releases/download/v${GITLEAKS_VERSION}/gitleaks_${GITLEAKS_VERSION}_linux_x64.tar.gz"
-        tar -xzf /tmp/gitleaks.tar.gz -C /tmp
-        sudo mv /tmp/gitleaks /usr/local/bin/gitleaks
-        gitleaks version
-
-    # ---- Run GitLeaks on the PR commit range ----
-    - name: Detect secrets with GitLeaks
-      if: ${{ github.event_name == 'pull_request' }}
-      shell: bash
+    # --- Use the official GitLeaks Action (scans repo, writes SARIF) ---
+    - name: Run GitLeaks scan
+      uses: gitleaks/gitleaks-action@v2
       env:
         GITHUB_TOKEN: ${{ github.token }}
-      run: |
-        set -euo pipefail
-        BASE_SHA=$(jq -r '.pull_request.base.sha' "$GITHUB_EVENT_PATH")
-        HEAD_SHA=$(jq -r '.pull_request.head.sha' "$GITHUB_EVENT_PATH")
-        gitleaks detect \
-          --redact \
-          --source "${{ github.workspace }}" \
-          --log-opts="--no-merges --first-parent ${BASE_SHA}..${HEAD_SHA}" \
-          --report-format json \
-          --report-path "${{ github.workspace }}/gitleaks-report.json" || true
-        test -f "${{ github.workspace }}/gitleaks-report.json" || echo "[]" > "${{ github.workspace }}/gitleaks-report.json"
+      with:
+        version: latest
+      continue-on-error: true  # don't fail the job; we'll surface findings in our PR comment
 
-    # ---- Fallback for non-PR events ----
-    - name: Detect secrets with GitLeaks (working tree)
-      if: ${{ github.event_name != 'pull_request' }}
+    # Convert GitLeaks SARIF (results.sarif) -> simple JSON array (gitleaks-report.json)
+    - name: Convert GitLeaks SARIF to JSON
       shell: bash
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
       run: |
         set -euo pipefail
-        gitleaks detect \
-          --redact \
-          --no-git \
-          --source "${{ github.workspace }}" \
-          --report-format json \
-          --report-path "${{ github.workspace }}/gitleaks-report.json" || true
-        test -f "${{ github.workspace }}/gitleaks-report.json" || echo "[]" > "${{ github.workspace }}/gitleaks-report.json"
+        if [ -f "results.sarif" ]; then
+          # Extract file, line, ruleId into a flat array the JS expects
+          jq '
+            (.runs[0].results // []) |
+            map({
+              File: ( .locations[0].physicalLocation.artifactLocation.uri // "unknown"),
+              StartLine: ( .locations[0].physicalLocation.region.startLine // 0),
+              RuleID: ( .ruleId // "gitleaks" )
+            })
+          ' results.sarif > gitleaks-report.json
+        else
+          echo "[]" > gitleaks-report.json
+        fi
 
     - name: Show GitLeaks findings (optional)
       if: always()
       shell: bash
       run: |
-        head -c 20000 "${{ github.workspace }}/gitleaks-report.json" || true
+        echo "GitLeaks JSON summary (first 20KB):"
+        head -c 20000 gitleaks-report.json || true
 
     - name: Install deps
       shell: bash
