--- a/action.yml
+++ b/action.yml
@@ -36,7 +36,7 @@ inputs:
   risky_exts:
     description: "Comma-separated file extensions"
     required: false
-    default: "js,ts,tsx,jsx,py,go,rb,php,java,kt,cs,rs,swift,c,cc,cpp,h,sql,sh,ps1,yml,yaml,json,html,htm,css,scss,vue,mdx"
+    default: "js,ts,tsx,jsx,py,go,rb,php,java,kt,cs,rs,swift,c,cc,cpp,h,sql,sh,ps1,yml,yaml,json,html,htm,css,scss,vue,mdx,tf,tfvars,hcl"
   openai_base_url:
     description: "Optional: alternate base URL (e.g., OpenRouter)"
     required: false
